bug fix attempt to move cursor on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,9 +39,3 @@ img{
     padding: 10px;
 }
 
-@media (max-width: 768px) {
-    .btn:hover {
-      background-color: initial;
-      transform: none;
-    }
-  }
